fix some code smells in ui data model